<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">grade(ient)</string>
    <string name="action_add_task">Add Task</string>
    <string name="action_settings">Settings</string>
    <string name="view_task">View Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="title_activity_task_view">Tasks</string>
    <string name="welcome_message">Welcome to grade(ient)! :)</string>

    <!-- General-purpose strings -->
    <string name="DONE">DONE</string>
    <string name="DUE">DUE</string>
    <string name="NOTES">NOTES</string>
    <string name="START">START</string>
    <string name="SUBJECT">SUBJECT</string>
    <string name="due_">due </string>
    
    <!-- Edit task -->
    <string name="title_activity_edit_task">Edit Task</string>
    <string name="hint_task_name">Task name</string>
    <string name="hint_subject_name">Subject name</string>
    <string name="hint_task_notes">Notes</string>
    <string name="action_accept_add_task">Confirm changes</string>
    <string name="action_cancel_add_task">Cancel changes</string>
    <string name="random_work">Add random work times</string>
    
    <!-- Calendar view -->
    <string name="action_calendar_go_to_now">Go to now</string>
    
    <!-- Home screen -->
    <string name="title_activity_home_screen">grade(ient)</string>
    <string name="home_goto_calendar_label">Go to\ncalendar</string>
	<string name="action_task_list">Task list</string>
	<string name="calendar_view">Calendar view</string>
	<string name="send_feedback">Send feedback</string>
	<string name="github">grade(ient) on GitHub</string>
	<string name="next_work_times">Next work times</string>
	<string name="next_tasks_due">Next tasks due</string>
	<string name="sample_date">Wednesday, Sept. 20</string>
	<string name="open_drawer">Open drawer</string>
	<string name="close_drawer">Close drawer</string>
	<string name="home_next_now">Now:</string>
	<string name="home_next_definitely">definitely work on</string>
	<string name="home_next_maybe">definitely work on</string>
	<string name="home_next_task">Next task name</string>

    <!-- Task summary view -->
    <string name="title_activity_task_summary_view"></string>
    <string name="subject">Subject</string>
    <string name="task">Task</string>
    <string name="start">Start</string>
	<string name="due">Due</string>
	<string name="notes">Notes</string>
	<string name="action_delete_task">Delete Task</string>
	<string name="action_edit_task">Edit Task</string>
	<string name="delete_msg_template">Are you sure you want to delete ^1?</string>
	<string name="task_deleted">Task deleted</string>
	
</resources>
