<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditTaskActivity" >

    <LinearLayout
        style="@style/LayoutWithMedMargins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!--
	    TODO might consider adding back standard activity margin/padding? 
	    TODO decide what to do with accessibility strings
        -->


        <!-- Task name -->

        <EditText
            android:id="@+id/task_name"
            style="@style/TextAppearance.EditEvent_Value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dip"
            android:capitalize="sentences"
            android:focusable="true"
            android:hint="@string/hint_task_name"
            android:inputType="textAutoCorrect|textCapSentences"
            android:minHeight="48dip"
            android:singleLine="true" />

        <!-- Subject name -->

        <EditText
            android:id="@+id/subject_name"
            style="@style/TextAppearance.EditEvent_Value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:capitalize="words"
            android:focusable="true"
            android:hint="@string/hint_subject_name"
            android:inputType="textAutoCorrect|textCapSentences|textCapWords"
            android:minHeight="48dip"
            android:singleLine="true" />

        <!-- Start/due -->

        <include layout="@layout/start_end_picker" />

        <!-- Task done? -->

        <LinearLayout
            android:id="@+id/done_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dip"
            android:gravity="center_vertical"
            android:minHeight="24dip"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/is_done"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="0dip"
                android:gravity="center_vertical" />
            <!-- android:contentDescription="@string/accessibility_all_day" -->

            <TextView
                android:id="@+id/is_done_label"
                style="@style/TextAppearance.EditEvent_Small"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:text="@string/DONE" />
        </LinearLayout>

        <!-- Notes -->

        <LinearLayout
            android:id="@+id/notes_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dip"
            android:focusable="true"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/notes"
                style="@style/TextAppearance.EditEvent_Value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:capitalize="sentences"
                android:hint="@string/hint_task_notes"
                android:inputType="textAutoCorrect|textCapSentences|textMultiLine"
                android:minHeight="48dip" />
        </LinearLayout>
        
        <CheckBox
            android:id="@+id/random_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/random_work" />
    </LinearLayout>

</ScrollView>