<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    tools:context=".HomeScreenActivity">

    <LinearLayout
        android:id="@+id/home_overview_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/home_padding"
        android:weightSum="2" >

        <!--
    Note that weightSum is the sum of the weights of the stuff
    in the LinearLayout. You have to specify it to get things to actually
    turn out the same height, apparently. (Weights of 0 in things below
    mean match the content's height.)
        -->

        <LinearLayout
            android:id="@+id/home_date_and_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="#73737B"
            android:orientation="vertical"
            android:padding="@dimen/home_padding" >

            <TextView
                android:id="@+id/home_time_and_day"
                style="@style/home_text_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TextView>

            <TextView
                android:id="@+id/home_date"
                style="@style/home_text_xl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="14dp" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/home_padding"
            android:paddingTop="@dimen/home_padding" >

            <!-- this row will expand in the layout when you put more things in it -->

            <LinearLayout
                android:id="@+id/home_next_task"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/home_padding"
                android:layout_weight="1"
                android:background="@color/holo_orange_light"
                android:padding="@dimen/home_padding" >

                <!-- android:layout_width="wrap_content" -->

                <TextView
                    android:id="@+id/home_next_task_title"
                    style="@style/home_text_l"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </TextView>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/home_goto_calendar_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/holo_green_dark"
                android:clickable="true"
                android:onClick="startCalendarActivity"
                android:padding="@dimen/home_padding" >

                <TextView
                    android:id="@+id/home_goto_calendar_button_label"
                    style="@style/home_text_m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="3"
                    android:text="@string/home_goto_calendar_label"
                    android:textColor="@android:color/white" >
                </TextView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/home_goto_calendar_button_label"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_action_forward" >
                </ImageView>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/home_padding"
            android:layout_weight="1"
            android:background="@color/holo_purple"
            android:orientation="vertical"
            android:padding="@dimen/home_padding" >

            <TextView
                style="@style/home_text_s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_work_times" />

            <ListView
                android:id="@+id/upcoming_work"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawSelectorOnTop="false"
                android:orientation="vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/holo_blue_dark"
            android:orientation="vertical"
            android:padding="@dimen/home_padding" >

            <TextView
                style="@style/home_text_s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_tasks_due" />

            <ListView
                android:id="@+id/upcoming_tasks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:drawSelectorOnTop="false"
                android:orientation="vertical" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/nav_drawer"
        android:layout_width="@dimen/nav_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />

</android.support.v4.widget.DrawerLayout>